# stock_trader

./: .dockerignore  .env.example  .gitignore  AI_IMPLEMENTAtiON_PLAN.md  CLAUDE.md  INSTANTDB_SETUP.md  README.md  index.html  instant.perms.ts  instant.schema.ts  metadata.json  package-lock.json  package.json  railway.json  vercel.json  vite.config.ts
.agents/skills/: README.md
python_ai/: DEPLOY.md  Dockerfile  Dockerfile_bak  README.md  pyproject.toml
python_ai/app/: main.py
python_ai/app/agents/: __init__.py  financial_advisor.py  functional_tool.py  openai_agents_runtime.py  prompts.py  research_agent.py  skills_catalog.py
python_ai/app/api/: routes.py
python_ai/app/core/: config.py  logging.py  market_hours.py
python_ai/app/pipeline/: run_loop.py  run_morning_briefing.py  run_once.py  service.py
python_ai/app/reports/: latest.py
python_ai/app/schemas/: recommendations.py
python_ai/artifacts/: pipeline_run_20260318160829.json  pipeline_run_20260318161555.json  pipeline_run_20260318161634.json
python_ai/scripts/: verify_docker_image.sh
python_ai/tests/: test_api.py  test_financial_advisor.py  test_pipeline_service.py  test_research_agent.py  test_skills_catalog.py
ui/src/: App.jsx  main.jsx  store.js
ui/src/components/: Badge.jsx  CashAdjustmentModal.jsx  GlassCard.jsx  InstantMagicCodeLogin.jsx  MobileNav.jsx  ResetPortfolioModal.jsx  TradeModal.jsx  TradingModeSelector.jsx
ui/src/containers/: Dashboard.jsx  Portfolio.jsx  StrategyBuilder.jsx
ui/src/data/: portfolioHoldings.json  tradeableStocks.js
ui/src/lib/: cashAdjustments.js  (+7 more)
(+8 files in other folders)
